# river-hs

./: README.org  river-hs.cabal
app/: Main.hs
src/: River.hs
tests/: Tests.hs
