cabal-version:      3.0
name:               river-hs
version:            0.1.0.0
synopsis:           a RiverWM config written in Haskell
-- description:
license:            GPL-2.0-only
license-file:       LICENSE
author:             Hikari
maintainer:         quelln@protonmail.com
-- copyright:
category:           WMs
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -threaded

executable river-hs
    import:           warnings
    main-is:          Main.hs
    --other-modules:    River
    -- other-extensions
    build-depends:    base ^>=4.18.2.1, process,bits-show, text,vector
    hs-source-dirs:   app
    default-language: Haskell2010
